style changes for navigation and splash page to fix errors with spacing of nav bar

--- a/src/sass/navigation/navigation.scss
+++ b/src/sass/navigation/navigation.scss
@@ -16,6 +16,7 @@ $pinkish: #ff98a1;
 	width: 100%;
 	color: $pinkish;
 	// top: 0;
+	margin-bottom: 0.5em;
 }
 
 .fa-bars {
